<resources>
    <string name="app_name">Yocabulary</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="look_up_words">Show Stored Words</string>
    <string name="word_list_fragment_label">Words That Start With {letter}</string>
    <string name="word_details_fragment_label">{word}</string>
    <string name="submit">Add new word</string>
    <string name="add_new_word">Add New Word</string>

    <string name="remove_word">Remove word</string>
    <string name="show_recent">Show recent words</string>
    <string name="edit_word">Edit word</string>
    <string name="word_update_error">Error. Try again</string>

    <string name="search_word_btn">Search translation</string>

    <string name="in_development">In development</string>

    <string name="practice">Practice</string>
    <string name="sets">Sets</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="settings">Settings</string>

    <!--fragment_add_new_word-->
    <string name="new_word">Word *</string>
    <string name="transcription">Transcription</string>
    <string name="general_translation">Translation</string>
    <string name="general_translation_info_title">General Translation</string>
    <string name="general_translation_info_description">If "General" is on then the user can add general translation to the word. Otherwise, the user can add a unique translation for every "Part of speech" block</string>
    <string name="general">General</string>
    <string name="help">Help</string>
    <string name="part_of_speech">%s Part of speech *</string>
    <string name="translation">%s Translation</string>
    <string name="meaning">%s Meaning</string>
    <string name="example">%s Example</string>
    <string name="synonyms">%s Synonyms</string>
    <string name="save_word">Save word</string>
    <string name="button_cancel">Cancel</string>
    <string name="required_error">* Required</string>
    <string name="new_word_added">Added new word</string>
    <string name="word_updated_success">Successfully updated</string>
    <string name="search_in_dictionary">Search in<br> dictionary</br></string>
    <string name="add_meaning">Add Meaning</string>
    <string name="add_part_of_speech">Add Part of speech</string>
    <string name="remove_part_of_speech">Remove Part of speech</string>
    <string name="remove_meaning">Remove Meaning</string>
    <string name="loading_word">Loading</string>
    <string name="changes_unsaved">Unsaved changes</string>
    <string name="changes_unsaved_desc">If you leave, the changes won\'t be saved</string>
    <string name="leave">Leave</string>
    <string name="stay">Stay</string>
    <string name="error_add_or_update">Failed to add/update word. Try again</string>

    <string name="error">Error</string>
    <string name="no_such_word">No such word in dictionary</string>
    <string name="check_internet_connection">Check your internet connection</string>
    <string name="unknown_error">Unknown error. Please try again later</string>
    <string name="word_already_exists">You already have this word in vocabulary</string>
    <string name="are_you_sure">Do you want to delete this word?</string>
    <string name="got_it">Got it</string>
    <string name="replace">Replace</string>

    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>

    <string name="search_in_dictionary_inline">Search this word in dictionary</string>

    <!--Vocabulary fragments -->
    <string name="vocabulary_tab">Vocabulary</string>
    <string name="my_words_tab">My words</string>
    <string name="my_sets_tab">My sets</string>
    <string name="sort_words">Sort words</string>
    <string name="search_words_hint">Search words</string>
    <string name="add_word_to_favorite">Add word %s to favorite</string>
    <string name="add_word_to_vocabulary">Add word %s to favourite</string>
    <string name="pronounce_word">Pronounce word</string>
    <string name="delete_word">Delete word</string>
    <string name="more_options_menu">More options</string>
    <string name="synonyms_header">Synonyms</string>
    <string name="add_translation">Add translation</string>
    <string name="save_translation">Save translation</string>

    <string name="sort_by_word">Word</string>
    <string name="sort_by_date">Date modified</string>
    <string name="sort_by_favorite">Favorite</string>
    <string name="title_activity_try">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <!-- Practice Page -->

    <!-- PracticeHomePageFragment -->
    <string name="match_meanings_with_words">Match meanings\nwith words</string>
    <string name="learn_spelling">Learn spelling</string>
    <string name="mixed_practice">Mixed practice</string>
    <string name="practice_english">Practice English</string>
    
    <!-- PracticeStartPageFragment -->
    <string name="meaning_task">Choose the correct word\nfor the given meaning</string>
    <string name="start">Start</string>
    <string name="not_enough_words_title">Not enough words</string>
    <string name="not_enough_words_desc">You should have at least 5 words in your vocabulary</string>
    <string name="no_meanings_title">Good job</string>
    <string name="no_meanings_desc">There are no meanings that should be practiced at the moment.\nYou can repeat meanings that have been already practiced</string>
    <string name="repeat">Repeat</string>

    <!-- PracticeFragment -->
    <string name="next_question">Next</string>
    <string name="match_meaning">Match meaning with word</string>

</resources>