<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sort_words"
        android:icon="@drawable/ic_arrow_sort_24"
        android:title="@string/sort_words"
        app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:checked="true"
                    android:id="@+id/sort_by_date"
                    android:title="@string/sort_by_date" />
                <item
                    android:id="@+id/sort_by_word"
                    android:title="@string/sort_by_word" />
                <item
                    android:id="@+id/sort_by_favorite"
                    android:title="@string/sort_by_favorite" />
            </group>
        </menu>
    </item>
</menu>