<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/part_of_speech"
        style="@style/Widget.Yocabulary.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/part_of_speech">

    <AutoCompleteTextView
        android:id="@+id/part_of_speech_dropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dropDownHeight="300dp"
        android:inputType="none"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/translation"
        style="@style/Widget.Yocabulary.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/translation">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/translation_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/meaning"
        style="@style/Widget.Yocabulary.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/meaning">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/meaning_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/example"
        style="@style/Widget.Yocabulary.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/example">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/example_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>